# CCNetizen

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  serverless.yml
src/: config.rs  data.rs  main.rs
src/commands/: falling.rs  help.rs  mod.rs  ping.rs  town.rs
src/config/: db_client.rs  mod.rs  secret.rs
src/handlers/: mod.rs
src/models/: mod.rs  towns.rs
src/repositories/: mod.rs  towns.rs
src/services/: data.rs  data_fetcher.rs  mod.rs  town.rs
