[package]
name = "CCNetizen"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
htmlentity = "1.3.1"
aws-sdk-dynamodb = "1.9"
aws-config = "1.1.4"
lambda_runtime = "0.13.0"
serenity = { version = "0.12.4", features = ["framework", "standard_framework", "cache", "http"] }
hex = "0.4"
thiserror = "2.0.11"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8.20"
poise = "0.6.1"